Zoom in on mobile fix

--- a/src/App.css
+++ b/src/App.css
@@ -119,6 +119,8 @@ html, body {
   }
   .input-field {
     font-size: 16px;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
   }
 }
 
